feat: precompletion